updated for Calgary workshop

--- a/slides.html
+++ b/slides.html
@@ -497,20 +497,6 @@
     </section>
 
 <!--Slide 30-->
-    <section class="slide" data-markdown>
-      <script type="text/template">
-        #Group Exercise - Brainstorm (15mins)
-
-        In groups of 2 or 3, brainstorm and discuss the below points.
-
-        1. Think of a blog post you'd like to write about.
-        1. What category and tags would you use?
-
-        >Share your idea with the class!
-      </script>
-    </section>
-
-<!--Slide 31-->
     <section class="slide resized" data-markdown>
       <script type="text/template">
         #Adding content:
@@ -527,7 +513,7 @@
       </script>
     </section>
 
-<!--Slide 32-->
+<!--Slide 31-->
     <section class="slide resized" data-markdown>
       <script type="text/template">
         #Block Options <iframe width="260" height="30" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/255889006&color=%23ff5500&auto_play=false&hide_related=false&show_comments=false&show_user=false&show_reposts=false&show_teaser=false"></iframe>
@@ -540,7 +526,7 @@
       </script>
     </section>
 
-<!--Slide 33-->
+<!--Slide 32-->
     <section class="slide resized" data-markdown>
       <script type="text/template">
         #Images & Featured image
@@ -551,7 +537,7 @@
       </script>
     </section>
 
-<!--Slide 34-->
+<!--Slide 33-->
     <section class="slide side-by-side" data-markdown>
       <script type="text/template">
       #Adding content: Text
@@ -567,7 +553,7 @@
       </script>
     </section>
 
-<!--Slide 35-->
+<!--Slide 34-->
     <section class="slide title" data-markdown data-toc>
       <script type="text/template">
         #HTML Crash Course!
@@ -575,7 +561,7 @@
       </script>
     </section>
 
-<!--Slide 36-->
+<!--Slide 35-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #HTML Syntax
@@ -591,7 +577,7 @@
       </script>
     </section>
 
-<!--Slide 37-->
+<!--Slide 36-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #HTML Headings
@@ -612,7 +598,7 @@
       </script>
     </section>
 
-<!--Slide 38-->
+<!--Slide 37-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #HTML Links
@@ -632,7 +618,7 @@
       </script>
     </section>
 
-<!--Slide 39-->
+<!--Slide 38-->
     <section class="slide side-by-side" data-markdown>
       <script type="text/template">
         #WordPress and HTML
@@ -651,22 +637,7 @@
       </script>
     </section>
 
-<!--Slide 40-->
-    <section class="slide resized" data-markdown>
-      <script type="text/template">
-        #Paragraphs
-
-        In WordPress, you don't need to add `<p>` tags in the visual **or** text editor. In the visual editor, select the paragraph from the dropdown.
-
-        ![Visual paragraph screenshot](framework/img/workshop/38-editor-visual-p.png)
-
-        In the Text editor, just ensure you return/enter twice to add a space between the paragraphs.  They will automatically be converted into `<p>` tags via WordPress magic!
-
-        ![Text paragraph screenshot](framework/img/workshop/38-editor-text-p.png)
-      </script>
-    </section>
-
-<!--Slide 41-->
+<!--Slide 39-->
     <section class="slide" data-markdown>
       <script type="text/template">
         # HTML line break
@@ -697,20 +668,20 @@
       </script>
     </section>
 
-<!--Slide 42-->
-    <section class="slide" data-markdown>
+<!--Slide 40-->
+    <section class="slide side-by-side" data-markdown>
       <script type="text/template">
-        #HTML line break
+        # HTML line break
 
         Like paragraphs, in the editor, break tags `<br>` are not needed.
 
-        Just use the enter/return key *once* for a line break in either the visual or text WordPress editor.
+        Every paragraph is contained within it’s own `<p>` block. To create a line break instead of starting a new paragraph, hold the *shift* key down when you hit *return/enter*.
 
         ![Line break screenshot](framework/img/workshop/40-editor-line-break.png)
       </script>
     </section>
 
-<!--Slide 43-->
+<!--Slide 41-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #HTML & Wordpress
@@ -728,7 +699,7 @@
       </script>
     </section>
 
-<!--Slide 44-->
+<!--Slide 42-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #Exercise - Add some content (20mins)
@@ -756,8 +727,8 @@
       </script>
     </section>
 
-<!--Slide 45-->
-    <section class="slide resized" data-markdown>
+<!--Slide 43-->
+    <section class="slide side-by-side" data-markdown>
       <script type="text/template">
         # Slug: Posts & Pages
 
@@ -765,14 +736,13 @@
 
         In Posts and Pages, the slug appears in the URL and is generated automatically based on the title. It can be changed manually but it's best to keep it simple and relevant.
 
-        Only the highlighted portion is classified as the slug and can be changed. Select the hyperlink icon to change it manually.
+        Only the highlighted portion is classified as the slug and can be changed. The slug is shown in the **Permalink** section, under URL. You can change it here and watch the Permalink change under Preview.
         ![Automatic slug screenshot](framework/img/workshop/43-slug-automatic.png)
-
         ![Manual slug screenshot](framework/img/workshop/43-slug-edited.png)
       </script>
     </section>
 
-<!--Slide 46-->
+<!--Slide 44-->
     <section class="slide centered" data-markdown data-toc>
       <script type="text/template">
         # Wordpress Themes
@@ -781,7 +751,7 @@
       </script>
     </section>
 
-<!--Slide 47-->
+<!--Slide 45-->
     <section class="slide" data-markdown>
       <script type="text/template">
         # What is a WordPress Theme?
@@ -799,7 +769,7 @@
       </script>
     </section>
 
-<!--Slide 48-->
+<!--Slide 46-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #Free & Paid Themes
@@ -813,7 +783,7 @@
       </script>
     </section>
 
-<!--Slide 49-->
+<!--Slide 47-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #WordPress.com & Themes
@@ -824,7 +794,7 @@
       </script>
     </section>
 
-<!--Slide 50-->
+<!--Slide 48-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #Choosing a Theme
@@ -837,17 +807,17 @@
       </script>
     </section>
 
-<!--Slide 51-->
+<!--Slide 49-->
     <section class="slide resized" data-markdown>
       <script type="text/template">
         #Choosing a Theme
 
-        Select **Themes** from the menu. The first theme that appears in the listing is your *active* theme. You can also filter the options to show only free or premium themes.
+        Select **Customize > Themes** from the menu. The first theme that appears in the listing is your *active* theme. You can also filter the options to show only free or premium themes.
         ![Themes screenshot](framework/img/workshop/49-dashboard-themes.png)
       </script>
     </section>
 
-<!--Slide 52-->
+<!--Slide 50-->
     <section class="slide resized" data-markdown>
       <script type="text/template">
         #Choosing a Theme
@@ -862,7 +832,7 @@
       </script>
     </section>
 
-<!--Slide 53-->
+<!--Slide 51-->
     <section class="slide resized" data-markdown>
       <script type="text/template">
         #Choosing a Theme
@@ -877,7 +847,7 @@
       </script>
     </section>
 
-<!--Slide 54-->
+<!--Slide 52-->
     <section class="slide list-font-default" data-markdown>
       <script type="text/template">
         #Colours
@@ -893,7 +863,7 @@
       </script>
     </section>
 
-<!--Slide 55-->
+<!--Slide 53-->
     <section class="slide list-font-default" data-markdown>
       <script type="text/template">
         #Exercise - Choose a theme (15mins)
@@ -911,15 +881,15 @@
       </script>
     </section>
 
-<!--Slide 56-->
+<!--Slide 54-->
     <section class="slide title" data-markdown>
       <script type="text/template">
       #Wordpress & Blogging <br>Part Two
       </script>
     </section>
 
-<!--Slide 57-->
-    <section id="custom-menu" class="slide resized" data-markdown data-toc>
+<!--Slide 55-->
+    <section id="custom-menu" class="slide side-by-side" data-markdown data-toc>
       <script type="text/template">
         #Create a Custom Menu
 
@@ -927,11 +897,10 @@
 
         The menu location may vary depending on the theme.  Some themes also offer additional menus such as social links menus.
 
-        Navigate to the **Menus** option by selecting **Themes > Customize**.
+        Navigate to the **Menus** option by selecting **Customize**.
 
-        ![Menus screenshot](framework/img/workshop/55-menus-1.png)<!-- .element: class="left" style="margin: 0 20px 40px 0;"-->
-
-        ![Menus screenshot](framework/img/workshop/55-menus-2.png)<!-- .element: class="left" style="margin: 0 20px 40px 0;"-->
+        ![Menus screenshot](framework/img/workshop/55-menus-1.png)
+        ![Menus screenshot](framework/img/workshop/55-menus-2.png)
 
         ---
         ###Resource
@@ -939,7 +908,7 @@
       </script>
     </section>
 
-<!--Slide 58-->
+<!--Slide 56-->
     <section class="slide two-col-list" data-markdown>
       <script type="text/template">
         #Create a Custom Menu
@@ -952,7 +921,7 @@
       </script>
     </section>
 
-<!--Slide 59-->
+<!--Slide 57-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #Create a Custom Menu
@@ -967,7 +936,7 @@
       </script>
     </section>
 
-<!--Slide 60-->
+<!--Slide 58-->
     <section class="slide resized" data-markdown data-toc>
       <script type="text/template">
         #Home Page and Blog settings
@@ -980,7 +949,7 @@
       </script>
     </section>
 
-<!--Slide 61-->
+<!--Slide 59-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #Home page and Blog settings
@@ -993,7 +962,7 @@
       </script>
     </section>
 
-<!--Slide 62-->
+<!--Slide 60-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #Duplicated pages/posts
@@ -1007,7 +976,7 @@
       </script>
     </section>
 
-<!--Slide 63-->
+<!--Slide 61-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #Home page and Blog settings
@@ -1023,7 +992,7 @@
       </script>
     </section>
 
-<!--Slide 64-->
+<!--Slide 62-->
     <section class="slide" data-markdown data-toc>
       <script type="text/template">
         #General Tips & Tricks
@@ -1040,7 +1009,7 @@
       </script>
     </section>
 
-<!--Slide 65-->
+<!--Slide 63-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #General Tips & Tricks
@@ -1059,7 +1028,7 @@
       </script>
     </section>
 
-<!--Slide 66-->
+<!--Slide 64-->
     <section class="slide resized" data-markdown>
       <script type="text/template">
         #General Tips & Tricks
@@ -1073,7 +1042,7 @@
       </script>
     </section>
 
-<!--Slide 67-->
+<!--Slide 65-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #Exercise - Update Your Menu (20mins)
@@ -1088,7 +1057,7 @@
       </script>
     </section>
 
-<!--Slide 68-->
+<!--Slide 66-->
     <section class="slide title content-king" data-markdown data-toc>
       <script type="text/template">
         #Blogging Tips & Tricks
@@ -1096,7 +1065,7 @@
       </script>
     </section>
 
-<!--Slide 69-->
+<!--Slide 67-->
     <section class="slide" data-markdown>
       <script type="text/template">
         # What to Blog About: Finding a Niche
@@ -1112,7 +1081,7 @@
       </script>
     </section>
 
-<!--Slide 70-->
+<!--Slide 68-->
     <section class="slide" data-markdown>
       <script type="text/template">
         # What to Blog About: Finding a Niche
@@ -1130,7 +1099,7 @@
       </script>
     </section>
 
-<!--Slide 71-->
+<!--Slide 69-->
     <section class="slide niche-blogs" data-markdown>
       <script type="text/template">
         # What to Blog About: Finding a Niche
@@ -1148,7 +1117,7 @@
       </script>
     </section>
 
-<!--Slide 72-->
+<!--Slide 70-->
     <section class="slide nested-list" data-markdown>
       <script type="text/template">
         #Types of Bloggers
@@ -1173,7 +1142,7 @@
       </script>
     </section>
 
-<!--Slide 73-->
+<!--Slide 71-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #Money, Money, Money!
@@ -1195,7 +1164,7 @@
       </script>
     </section>
 
-<!--Slide 74-->
+<!--Slide 72-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #How do you monetize a blog?
@@ -1209,7 +1178,7 @@
       </script>
     </section>
 
-<!--Slide 75-->
+<!--Slide 73-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #There are no formulas!
@@ -1224,7 +1193,7 @@
       </script>
     </section>
 
-<!--Slide 76-->
+<!--Slide 74-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #More Advice
@@ -1241,7 +1210,7 @@
       </script>
     </section>
 
-<!--Slide 77-->
+<!--Slide 75-->
     <section class="slide list-font-default" data-markdown>
       <script type="text/template">
         # Group exercise: Finding a Niche (20mins)
@@ -1256,7 +1225,7 @@
       </script>
     </section>
 
-<!--Slide 78-->
+<!--Slide 76-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #Understand your Audience
@@ -1272,7 +1241,7 @@
       </script>
     </section>
 
-<!--Slide 79-->
+<!--Slide 77-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #Understand your Audience
@@ -1284,14 +1253,14 @@
       </script>
     </section>
 
-<!--Slide 80-->
+<!--Slide 78-->
     <section class="slide title" data-markdown>
       <script type="text/template">
       #Composing a Post
       </script>
     </section>
 
-<!--Slide 81-->
+<!--Slide 79-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #Capture Their Attention
@@ -1304,7 +1273,7 @@
       </script>
     </section>
 
-<!--Slide 82-->
+<!--Slide 80-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #Capture Their Attention
@@ -1321,7 +1290,7 @@
       </script>
     </section>
 
-<!--Slide 83-->
+<!--Slide 81-->
     <section class="slide side-by-side" data-markdown>
       <script type="text/template">
         #Organize Your Content
@@ -1335,7 +1304,7 @@
       </script>
     </section>
 
-<!--Slide 84-->
+<!--Slide 82-->
     <section class="slide list-font-smaller" data-markdown>
       <script type="text/template">
         #Coming Up with Great Topics
@@ -1350,7 +1319,7 @@
       </script>
     </section>
 
-<!--Slide 85-->
+<!--Slide 83-->
     <section class="slide list-font-smaller" data-markdown>
       <script type="text/template">
         #Popular post types
@@ -1366,7 +1335,7 @@
       </script>
     </section>
 
-<!--Slide 86-->
+<!--Slide 84-->
     <section class="slide centered" data-markdown>
       <script type="text/template">
         #Write, Write, Write!
@@ -1375,7 +1344,7 @@
       </script>
     </section>
 
-<!--Slide 87-->
+<!--Slide 85-->
     <section class="slide" data-markdown>
       <script type="text/template">
         #Write, Write, Write!
@@ -1390,7 +1359,7 @@
       </script>
     </section>
 
-<!--Slide 88-->
+<!--Slide 86-->
     <section class="slide nested-list" data-markdown>
       <script type="text/template">
         # Create an Editorial Calendar
@@ -1408,10 +1377,10 @@
       </script>
     </section>
 
-<!--Slide 89-->
+<!--Slide 87-->
     <section class="slide" data-markdown>
       <script type="text/template">
-        # The Power of Images & Video
+        # The Power of Images & Other Embeds
 
         Visual appeal is crucial. In addition to breaking up you content into lists and digestable chunks, use images or infographics to visually represent ideas in the content.
 
@@ -1428,23 +1397,21 @@
       </script>
     </section>
 
-<!--Slide 90-->
-    <section class="slide resized" data-markdown>
+<!--Slide 88-->
+    <section class="slide side-by-side" data-markdown>
       <script type="text/template">
-        # The Power of Images & Video
+        # The Power of Images & Other Embeds
 
         Videos add life to your blog posts and is great for SEO (search engine optimization). Embed third-party videos in WordPress blog posts or add your own from YouTube, Vimeo, DailyMotion & more.
 
-        To add images or videos, from your post, select the **Add Media** button and you will be presented with various options.  Also, under the **Media** menu, you can manage your files.
+        To add videos, click the **+** to add a new block and select **Embeds**. You will have a variety of options for embedding videos from popular video platforms like YouTube and Vimeo, as well as social media and other sharing platforms.
 
-        ![Adding media screenshot](framework/img/workshop/87-adding-media-1.png)
-
-        ![Adding media screenshot](framework/img/workshop/87-adding-media-2.png)
-
+        ![Adding media screenshot](framework/img/workshop/88-adding-media-1.png)
+        ![Adding media screenshot](framework/img/workshop/88-adding-media-2.png)
       </script>
     </section>
 
-<!--Slide 91-->
+<!--Slide 89-->
     <section class="slide centered" data-markdown>
       <script type="text/template">
         # Promote Your Blog
@@ -1453,7 +1420,7 @@
       </script>
     </section>
 
-<!--Slide 92-->
+<!--Slide 90-->
     <section class="slide" data-markdown>
       <script type="text/template">
         # Promote Your Blog
@@ -1471,7 +1438,7 @@
       </script>
     </section>
 
-<!--Slide 93-->
+<!--Slide 91-->
     <section class="slide" data-markdown>
       <script type="text/template">
         # Search Engine Optimization
@@ -1489,7 +1456,7 @@
       </script>
     </section>
 
-<!--Slide 94-->
+<!--Slide 92-->
     <section class="slide" data-markdown>
       <script type="text/template">
         # SEO Keywords
@@ -1504,7 +1471,7 @@
       </script>
     </section>
 
-<!--Slide 95-->
+<!--Slide 93-->
     <section class="slide" data-markdown>
       <script type="text/template">
         # SEO Tips for Multimedia
@@ -1523,7 +1490,7 @@
       </script>
     </section>
 
-<!--Slide 96-->
+<!--Slide 94-->
     <section class="slide" data-markdown>
       <script type="text/template">
         # Today...
@@ -1538,7 +1505,7 @@
       </script>
     </section>
 
-<!--Slide 97-->    
+<!--Slide 95-->    
      <section class="slide centered" data-markdown>
       <script type="text/template">
         # You did it!
@@ -1546,7 +1513,7 @@
       </script>
     </section>
 
-<!--Slide 98-->
+<!--Slide 96-->
     <section class="slide" data-markdown>
       <script type="text/template">
         # More Blogging Resources
@@ -1558,7 +1525,7 @@
       </script>
     </section>
 
-<!--Slide 99-->
+<!--Slide 97-->
     <section class="slide small-type" data-markdown>
       <script type="text/template">
         # Next Steps
@@ -1588,6 +1555,11 @@
         <li><a href="https://amethystanswers.com/">amethystanswers.com</a></li>
         <li><a href="https://twitter.com/AmethystAnswers">@AmethystAnswers</a></li>
       </ul>
+
+      <hr>
+      <p>
+        Follow the <strong>Calgary Chapter</strong> on social media! @LearningCodeYYC
+      </p>
 
       <p class="attribution">Slide presentation created by <a href="http://christinatruong.com">Christina Truong</a> based on <a href="https://github.com/LeaVerou/csss">Lea Verou's SlideShow</a> and <a href="http://lab.hakim.se/reveal-js/">reveal.js</a>.</p>
     </section>
